changed lexer and bison

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,4 @@
+cmake_minimum_required(VERSION 3.15)
 project(ParserExampleWithAst)
 set(
     HEADERS
@@ -5,6 +6,7 @@ set(
     parser.hh
     )
 
+find_package(BISON REQUIRED)
 BISON_TARGET(
     MyParserWithAst
     parser.y
@@ -12,6 +14,7 @@ BISON_TARGET(
     DEFINES_FILE ${ParserExampleWithAst_SOURCE_DIR}/parser.hh
 )
 
+find_package(FLEX REQUIRED)
 FLEX_TARGET(
     MyScannerWithAst
     scanner.l
