--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,8 @@
 cmake_minimum_required(VERSION 3.15)
-project(ParserExampleWithAst)
+project(MiniJavaCompiler)
+
+set (CMAKE_CXX_STANDARD 11)
+
 set(
     HEADERS
     driver.hh
@@ -8,40 +11,50 @@ set(
 
 find_package(BISON REQUIRED)
 BISON_TARGET(
-    MyParserWithAst
+    MyParser
     parser.y
-    ${ParserExampleWithAst_SOURCE_DIR}/parser.cpp
-    DEFINES_FILE ${ParserExampleWithAst_SOURCE_DIR}/parser.hh
+    ${MiniJavaCompiler_SOURCE_DIR}/parser.cpp
+    DEFINES_FILE ${MiniJavaCompiler_SOURCE_DIR}/parser.hh
 )
 
 find_package(FLEX REQUIRED)
 FLEX_TARGET(
-    MyScannerWithAst
+    MyScanner
     scanner.l
-    ${ParserExampleWithAst_SOURCE_DIR}/scanner.cpp
+    ${MiniJavaCompiler_SOURCE_DIR}/scanner.cpp
 )
 
-ADD_FLEX_BISON_DEPENDENCY(MyScannerWithAst MyParserWithAst)
+ADD_FLEX_BISON_DEPENDENCY(MyScanner MyParser)
 
 add_executable(
-    ParserExampleWithAst
-    main.cpp
-    driver.cpp
-    ${BISON_MyParserWithAst_OUTPUTS}
-    ${FLEX_MyScannerWithAst_OUTPUTS}
-    expressions/NumberExpression.cpp
-    expressions/MulExpression.cpp
-    expressions/AddExpression.cpp
-    expressions/SubstractExpression.cpp
-    expressions/DivExpression.cpp
-    expressions/IdentExpression.cpp
-    assignments/Assignment.cpp
-    assignments/AssignmentList.cpp
-    Program.cpp
+        MiniJavaCompiler
+        main.cpp
+        driver.cpp
+        ${BISON_MyParser_OUTPUTS}
+        ${FLEX_MyScanner_OUTPUTS}
+        expressions/ObjectExpression.cpp
+        expressions/MulExpression.cpp
+        expressions/AddExpression.cpp
+        expressions/SubstractExpression.cpp
+        expressions/UnaryMinusExpression.cpp
+        expressions/DivExpression.cpp
+        expressions/ModExpression.cpp
+        expressions/IdentExpression.cpp
+        expressions/ComparisonExpression.cpp
+        expressions/AndExpression.cpp
+        expressions/OrExpression.cpp
+        expressions/XorExpression.cpp
+        expressions/NotExpression.cpp
+        expressions/AssignmentExpression.cpp
+        assignments/AssignmentList.cpp
+        assignments/Assignment.cpp
+        objects/PascalObject.cpp
+        Program.cpp
 )
 
+
 target_include_directories(
-    ParserExampleWithAst PRIVATE ${ParserExampleWithAst_SOURCE_DIR}
+        MiniJavaCompiler PRIVATE ${MiniJavaCompiler_SOURCE_DIR}
 )
 
 
