copypaste remove, create template for Interpreter

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,9 +62,8 @@ add_executable(
         objects/DoubleObject.cpp
         objects/StringObject.cpp
 
-        #visitors/evalvisitor.cpp
         visitors/printvisitor.cpp
-
+        visitors/interpreter.cpp
 
         Program.cpp)
 
